Added New/Open/Save as/Save and few bugs fixes

--- a/CGProject/CGProject/Dialogs/Help.resx
+++ b/CGProject/CGProject/Dialogs/Help.resx
@@ -122,6 +122,9 @@
 Можете да работите с векторни примитиви. Можете да ги създавате, местите,
 уголемявате/смалявате, групирате, триете и оцветявате.
 За целта може да използвате предоставените менюта или клавишните комбинации:
+Ctrl+N - създава нов файл
+Ctrl+Shift+S - Save as..
+Ctrl+S - Save
 Ctrl+C - копиране на примитив,
 Ctrl+V - поставяне на примитив,
 Del - изтриване на примитив,
