--- a/CGProject/CGProject/Form1.resx
+++ b/CGProject/CGProject/Form1.resx
@@ -359,4 +359,7 @@
         yaHexuVayiATYriSVherqRzqbfSWk2LQSdoO/U5S/H/jpiZXwB8fRQrD7TCZggAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>458, 17</value>
+  </metadata>
 </root>
